--- a/1_Wrangling.ipynb
+++ b/1_Wrangling.ipynb
@@ -11,14 +11,47 @@
     "Version: January 2025\n",
     "___\n",
     "\n",
-    "- Developed by [Hamam Wulan Ayu](https://www.linkedin.com/in/hwulanayu/) and assisted by [Irfan Chairur Rachman](https://www.linkedin.com/in/irfanchairurrachman/)"
+    "- Developed by [Hamam Wulan Ayu](https://www.linkedin.com/in/hwulanayu/) and [Irfan Chairur Rachman](https://www.linkedin.com/in/irfanchairurrachman/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load and Data Cleaning"
+    "# Inflation Forecasting \n",
+    "\n",
+    "This notebook explores several machine learning (ML) methods to improve inflation forecasting in Indonesia. The goal is to forecast general price inflation, based on various macroeconomic factors that affect inflation rate <sup>[[1]](#reference)</sup>. The data was collected for 2019-2024.\n",
+    "\n",
+    "This notebook uses Random Forest Regressor, Prophet time series, and Vanilla Neural Network methods to forecast inflation with the best performance is Vanilla Neural Network with 0.821 RMSE and 26.07% MAPE.\n",
+    "\n",
+    "This project divided by two notebook:\n",
+    "1. **`1_Wrangling.ipynb`: Consist of loading, exploring, wrangling and cleaning data for machine learning input.**\n",
+    "2. `2_Modelling.ipynb`: Consist of preprocessing, modelling and evaluating processes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load and Data Cleaning\n",
+    "\n",
+    "The data used in this notebook available on Bank Indonesia and Badan Pusat Statistik (BPS) websites. The data was collected for 2019-2024 with monthly range. Predictors are historical data of inflation with 3 lags, first lag represents inflation value previous month, second lag represents value from two months earlier, and third lag represents from three months earlier. This notebook also use external factors, the following factors are:\n",
+    "\n",
+    "- IHK (*Indeks Harga Konsumen*)\n",
+    "- BI rate (*tingkat suku bunga*)\n",
+    "- Money supply (*jumlah uang beredar*)\n",
+    "- Rupiah-to-dollar exhange rate\n",
+    "- IHSG\n",
+    "- Credit value\n",
+    "\n",
+    "This first notebook focus on how to loading from various data raw, cleaning and wrangling the dataset."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, we need to load the library"
    ]
   },
   {
@@ -27,6 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# library loading\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import statistics"
@@ -36,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Indeks Harga Konsumen"
+    "## IHK (*Indeks Harga Konsumen*)"
    ]
   },
   {
@@ -2155,21 +2189,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " Penambahan  faktor    eksternal  yang mempengaruhi  laju  inflasi  diantaranya \n",
-    "\n",
-    "- [X] IHK  (Indeks Harga Konsumen),\n",
-    "- [ ] tingkat suku bunga, \n",
-    "- [X] jumlah uang beredar, \n",
-    "- [X] nilai tukar rupiah, \n",
-    "- [ ] nilai kredit, \n",
-    "- [ ] nilai asset"
+    "External Factors:\n",
+    "- [x] IHK (*Indeks Harga Konsumen*)\n",
+    "- [ ] BI rate (*tingkat suku bunga*)\n",
+    "- [ ] Money supply (*jumlah uang beredar*)\n",
+    "- [ ] Rupiah-to-dollar exhange rate\n",
+    "- [ ] IHSG\n",
+    "- [ ] Credit value"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tingkat Suku Bunga"
+    "## BI rate (*tingkat suku bunga*)"
    ]
   },
   {
@@ -2814,30 +2847,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " Penambahan  faktor    eksternal  yang mempengaruhi  laju  inflasi  diantaranya \n",
-    "\n",
-    "- [X] IHK  (Indeks Harga Konsumen),\n",
-    "- [X] tingkat suku bunga, \n",
-    "- [X] jumlah uang beredar, \n",
-    "- [X] nilai tukar rupiah, \n",
-    "- [ ] nilai kredit, \n",
-    "- [ ] nilai asset"
+    "External Factors:\n",
+    "- [x] IHK (*Indeks Harga Konsumen*)\n",
+    "- [x] BI rate (*tingkat suku bunga*)\n",
+    "- [ ] Money supply (*jumlah uang beredar*)\n",
+    "- [ ] Rupiah-to-dollar exhange rate\n",
+    "- [ ] Credit value"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Nilai Kredit\n",
+    "## Credit value\n",
     "\n",
-    "> *Peningkatan kredit khususnya **kredit konsumsi** dapat memicu\n",
-    "pertumbuhan permintaan aggregat diatas output potensial yang mengakibatkan perekonomian\n",
-    "memanas. Pada gilirannya akan berdampak kepada peningkatan inflasi, defisit current account\n",
-    "serta apresiasi nilai tukar riil.*\n",
-    "\n",
-    "Referensi: UTARI,  G.A.D.,  ARIMURTI,  T.  &  KURNIATI, I.N.,   2012.   Pertumbuhan   Kredit   Optimal. Buletin Ekonomi dan Perbankan, pp.3–36\n",
-    "\n",
-    "https://bulletin.bmeb-bi.org/cgi/viewcontent.cgi?article=1275&context=bmeb"
+    "The **consumer credit** increases can trigger growth in aggregate demand beyond potential output that leads to an overheated economy. In turn, this will result inflation rising, deficit of current account, and exchange real rate appreciation <sup>[[2]](#reference)</sup>."
    ]
   },
   {
@@ -3802,30 +3826,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " Penambahan  faktor    eksternal  yang mempengaruhi  laju  inflasi  diantaranya \n",
-    "\n",
-    "- [X] IHK  (Indeks Harga Konsumen),\n",
-    "- [X] tingkat suku bunga, \n",
-    "- [X] jumlah uang beredar, \n",
-    "- [X] nilai tukar rupiah, \n",
-    "- [X] nilai kredit, \n",
-    "- [ ] nilai asset"
+    "External Factors:\n",
+    "- [x] IHK (*Indeks Harga Konsumen*)\n",
+    "- [x] BI rate (*tingkat suku bunga*)\n",
+    "- [ ] Money supply (*jumlah uang beredar*)\n",
+    "- [ ] Rupiah-to-dollar exhange rate\n",
+    "- [ ] IHSG\n",
+    "- [x] Credit value"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Kurs, IHSG, Uang Beredar\n",
-    "\n",
-    " Penambahan  faktor    eksternal  yang mempengaruhi  laju  inflasi  diantaranya \n",
-    "\n",
-    "- [X] IHK  (Indeks Harga Konsumen),\n",
-    "- [X] tingkat suku bunga, \n",
-    "- [X] jumlah uang beredar, \n",
-    "- [X] nilai tukar rupiah, \n",
-    "- [X] nilai kredit, \n",
-    "- [X] nilai asset"
+    "## Money supply, IHSG and Rupiah-to-Dollar Exhange Rate"
    ]
   },
   {
@@ -5013,6 +5027,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "External Factors:\n",
+    "- [x] IHK (*Indeks Harga Konsumen*)\n",
+    "- [x] BI rate (*tingkat suku bunga*)\n",
+    "- [x] Money supply (*jumlah uang beredar*)\n",
+    "- [x] Rupiah-to-dollar exhange rate\n",
+    "- [x] IHSG\n",
+    "- [x] Credit value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Combine the Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 89,
    "metadata": {},
@@ -5498,6 +5532,25 @@
    "outputs": [],
    "source": [
     "clean_df.to_csv(\"data/clean_df.csv\", index_label=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"reference\"></a>\n",
+    "# Reference\n",
+    "\n",
+    "[1] [Adyan Nur Alfiyatin,  Wayan Firdaus Mahmudy, Candra Fajri Ananda, Yusuf Priyo Anggodo, 2019. PENERAPAN EXTREME LEARNING MACHINE(ELM) UNTUK PERAMALAN LAJU INFLASI DI INDONESIA. Universitas Brawijaya Malang.](https://jtiik.ub.ac.id/index.php/jtiik/article/view/900/pdf)\n",
+    "\n",
+    "[2] [UTARI,  G.A.D.,  ARIMURTI,  T.  &  KURNIATI, I.N.,   2012.   Pertumbuhan   Kredit   Optimal. Buletin Ekonomi dan Perbankan, pp.3–36](https://bulletin.bmeb-bi.org/cgi/viewcontent.cgi?article=1275&context=bmeb)\n",
+    "\n",
+    "[3] [Putri, Nabila Aprilia (2024) Prediksi Tingkat Inflasi Kota Surabaya Berdasarkan Hasil Prediksi Harga Bahan Pokok Menggunakan Metode Long Short-Term Memory (LSTM). Other thesis, Institut Teknologi Sepuluh Nopember.](http://repository.its.ac.id/id/eprint/109561)"
    ]
   },
   {
