--- a/2_Modelling.ipynb
+++ b/2_Modelling.ipynb
@@ -11,14 +11,40 @@
     "Version: January 2025\n",
     "___\n",
     "\n",
-    "- Developed by [Hamam Wulan Ayu](https://www.linkedin.com/in/hwulanayu/) and assisted by [Irfan Chairur Rachman](https://www.linkedin.com/in/irfanchairurrachman/)"
+    "- Developed by [Hamam Wulan Ayu](https://www.linkedin.com/in/hwulanayu/) and [Irfan Chairur Rachman](https://www.linkedin.com/in/irfanchairurrachman/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessing & Modelling"
+    "# Inflation Forecasting \n",
+    "\n",
+    "This notebook explores several machine learning (ML) methods to improve inflation forecasting in Indonesia. The goal is to forecast general price inflation, based on various macroeconomic factors that affect inflation rate <sup>[[1]](#reference)</sup>. The data was collected for 2019-2024.\n",
+    "\n",
+    "This notebook uses Random Forest Regressor, Prophet time series, and Vanilla Neural Network methods to forecast inflation with the best performance is Vanilla Neural Network with 0.821 RMSE and 26.07% MAPE.\n",
+    "\n",
+    "This project divided by two notebook:\n",
+    "1. `1_Wrangling.ipynb`: Consist of loading, exploring, wrangling and cleaning data for machine learning input.\n",
+    "2. **`2_Modelling.ipynb`: Consist of preprocessing, modelling and evaluating processes.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preprocessing & Modelling\n",
+    "\n",
+    "The preprocessing use various technique to cleansing, evaluation and improve model performance. The preprocessing consist of:\n",
+    "- Create new columns consist of lagging data\n",
+    "- Cross-validation\n",
+    "- Imputation missing value\n",
+    "- Standardization\n",
+    "\n",
+    "The modelling process using these methods:\n",
+    "- Random Forest\n",
+    "- Prophet Time Series\n",
+    "- Vanilla Neural Network\n"
    ]
   },
   {
@@ -60,16 +86,13 @@
    "source": [
     "### Clean Data\n",
     "\n",
-    "Penambahan faktor eksternal yang mempengaruhi laju inflasi:\n",
-    "\n",
-    "- IHK (Indeks Harga Konsumen),\n",
-    "- tingkat suku bunga,\n",
-    "- jumlah uang beredar,\n",
-    "- nilai tukar rupiah,\n",
-    "- nilai kredit,\n",
-    "- nilai asset\n",
-    "\n",
-    "Source: https://jtiik.ub.ac.id/index.php/jtiik/article/view/900/pdf"
+    "The clean data are resulted from wrangling and cleaning processes in `1_Wrangling.ipynb`. The data include external factors, which are:\n",
+    "- [x] IHK (*Indeks Harga Konsumen*)\n",
+    "- [x] BI rate (*tingkat suku bunga*)\n",
+    "- [x] Money supply (*jumlah uang beredar*)\n",
+    "- [x] Rupiah-to-dollar exhange rate\n",
+    "- [x] IHSG\n",
+    "- [x] Credit value"
    ]
   },
   {
@@ -396,7 +419,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Lagged Data"
+    "## Create Lagged Data\n",
+    "\n",
+    "The purpose of creating new columns containing lag data in inflation prediction modelling using regression is to capture historical patterns and improve the model's accuracy by incorporating past values as predictors.\n",
+    "\n",
+    "We will use 3 months lag, which captures 3 previous months of value. All columns except `Bulan` will be used to create the lagged columns."
    ]
   },
   {
