feat: add explanation for modelling process

--- a/1_Wrangling.ipynb
+++ b/1_Wrangling.ipynb
@@ -5526,6 +5526,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This data will be use for modelling process. Furthermore, for easier process, we will export the dataframe into .csv so it will be easier to use for later process."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "metadata": {},
