--- a/2_Modelling.ipynb
+++ b/2_Modelling.ipynb
@@ -2380,7 +2380,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Random Forest"
+    "## Random Forest\n",
+    "\n",
+    "Random forest is an example of bagging method. The **forest** means a bunch of decision trees (it's homogen). The **random** means there are several randomness in the model that makes this model can perform well. Two randomness of random forests are:\n",
+    "\n",
+    "- Each tree is build from subsets of training sample through random sampling (with replacement)\n",
+    "- At each tree node, a subset of feature are randomly selected to generate the best split (rather than using all features)\n",
+    "\n",
+    "In the case of classification, our forest then classify the new example through that voting mechanism while in the case of regression it simply takes the average of output.\n",
+    "\n",
+    "Among many of its advantages, random forest can be used to solve for both regression and classification tasks, handles extremely large datasets well (since the ensemble approach means it only use a small sampled subset from the full dataset), would solve for the dimensionality problems through implicit feature selection while treating noisy data (missing values and outlier values) out of the box."
    ]
   },
   {
@@ -2820,6 +2829,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recall how we performed technique cross-validation. It involves splitting our data into two parts:\n",
+    "\n",
+    "- Train data is used to train our time series model in order to acquire the underlying patterns such as trend and seasonality.\n",
+    "- Test data is purposely being kept for us to perform a cross-validation and see how our model perform on an **unseen data**.\n",
+    "\n",
+    "The objective is quite clear, is that we are able to acquire a glimpse of what kind of error are we going to expect for the model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -2852,11 +2873,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Yang menarik dari random forest, kita dapat mengetahui variabel apa saja yang dianggap penting. Untuk mengetahui tingkat kepentingan dari suatu variabel kita dapat menggunakan tingkat impurity suatu variabel.\n",
+    "What's interesting about random forests is that we can identify which variables are considered important. To determine the importance level of a variable, we can use its impurity level.\n",
     "\n",
-    "Semakin tinggi Gini Impurity, semakin penting fitur tersebut. Pentingnya suatu fitur dihitung sebagai pengurangan total (dinormalisasi) dari kriteria yang dibawa oleh fitur tersebut.\n",
+    "The higher the Gini Impurity, the more important the feature. The importance of a feature is calculated as the total (normalized) reduction in criteria brought by that feature.\n",
     "\n",
-    "Mari kita buat plot di mana kita mendapatkan 10 fitur terpenting. "
+    "Let's create a plot to display the top 10 most important features."
    ]
   },
   {
@@ -2889,14 +2910,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prophet Regressor with Holiday"
+    "## Prophet Regressor with Holiday\n",
+    "\n",
+    "**Facebook** developed Prophet, an open-source tool that leverages GAM to make time series forecasting more accessible to non-experts. Prophet builds upon the traditional trend and seasonality components and adds a holiday effect to model irregular schedules, such as holidays. \n",
+    "\n",
+    "**Prophet**'s straightforward approach allows users to input their data and generate forecasts with minimal coding knowledge. It also includes robust model diagnostics and visualization tools, making it easy to identify issues and adjust the model as necessary.\n",
+    "\n",
+    "**Prophet** has been proven to be useful in various industries, including retail, finance, and transportation. The tool's ability to model the irregular schedules of holidays and other events has made it a popular choice for businesses that rely on accurate forecasting to make decisions. Additionally, Prophet's flexibility and ease of use make it an attractive option for businesses of all sizes, from small startups to large corporations.\n",
+    "\n",
+    "In conclusion, Prophet is an innovative tool that leverages GAM to make time series forecasting more accessible and user-friendly. Its ability to model trend, seasonality, and holiday effects has made it a popular choice among businesses that require accurate forecasting to make informed decisions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Preparation"
+    "### Data Preparation\n",
+    "\n",
+    "Prophet has rules to follow, one of the rules are the column names should be change to `ds` (for datetime column) and `y` (for value). Other name of columns will be assigned as regressor for time series forecasting."
    ]
   },
   {
@@ -3037,7 +3068,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cross-Validation"
+    "### Cross-Validation\n",
+    "\n",
+    "Let's split the dataset into train and test dataset, where 20% of the last data will be assign as test dataset and others will be use for model training."
    ]
   },
   {
@@ -3055,7 +3088,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Shock Event (Covid)"
+    "### Shock Event (Covid)\n",
+    "\n",
+    "To prevent large dips and spikes from being captured by the trend component, we can treat the days impacted by COVID-19 as holidays that will not repeat again in the future. This kind of features is called shock event<sup>[[4]](#reference)</sup>."
    ]
   },
   {
@@ -3280,7 +3315,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Vanilla Neural Network"
+    "## Vanilla Neural Network\n",
+    "\n",
+    "Next model will use neural network with 2 hidden layers. Adding layer resulted to overfit performance. This combination of layers and neurons is the best model that have tried for this data."
    ]
   },
   {
@@ -3461,12 +3498,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Performance Summary"
+    "# Model Performance Summary\n",
+    "\n",
+    "This table below compares all model performance in RMSE, MSE, MAE and MAPE metrics."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3549,6 +3588,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Neural network model with 2 hidden layers is the best model in every metrics among Random Forest and Prophet."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"reference\"></a>\n",
     "# Reference\n",
     "\n",
@@ -3557,13 +3603,10 @@
     "\n",
     "[2] [Inflation forecasting with Random Forest, Lund University](https://bulletin.bmeb-bi.org/cgi/viewcontent.cgi?article=1275&context=bmeb)\n",
     "\n",
-    "[3] [Putri, Nabila Aprilia (2024) Prediksi Tingkat Inflasi Kota Surabaya Berdasarkan Hasil Prediksi Harga Bahan Pokok Menggunakan Metode Long Short-Term Memory (LSTM). Other thesis, Institut Teknologi Sepuluh Nopember.](http://repository.its.ac.id/id/eprint/109561)"
+    "[3] [Putri, Nabila Aprilia (2024) Prediksi Tingkat Inflasi Kota Surabaya Berdasarkan Hasil Prediksi Harga Bahan Pokok Menggunakan Metode Long Short-Term Memory (LSTM). Other thesis, Institut Teknologi Sepuluh Nopember.](http://repository.its.ac.id/id/eprint/109561)\n",
+    "\n",
+    "[4] [Treating COVID-19 lockdowns as a one-off holidays, Prophet official documentations](https://facebook.github.io/prophet/docs/handling_shocks.html#treating-covid-19-lockdowns-as-a-one-off-holidays)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
