feat: add readme and fix wording in first notebook

--- a/1_Wrangling.ipynb
+++ b/1_Wrangling.ipynb
@@ -20,9 +20,9 @@
    "source": [
     "# Inflation Forecasting \n",
     "\n",
-    "This notebook explores several machine learning (ML) methods to improve inflation forecasting in Indonesia. The goal is to forecast general price inflation, based on various macroeconomic factors that affect inflation rate <sup>[[1]](#reference)</sup>. The data was collected for 2019-2024.\n",
+    "This notebook explores several machine learning (ML) methods to improve inflation forecasting in Indonesia. The goal is to forecast general price inflation, based on various macroeconomic factors that affect inflation rate <sup>[[1]](#reference)</sup>. The data was collected from 2019 to 2024.\n",
     "\n",
-    "This notebook uses Random Forest Regressor, Prophet time series, and Vanilla Neural Network methods to forecast inflation with the best performance is Vanilla Neural Network with 0.821 RMSE and 26.07% MAPE.\n",
+    "This notebook uses Random Forest Regressor, Prophet time series, and Vanilla Neural Network methods to forecast inflation, the best performance model is Vanilla Neural Network with 0.821 RMSE and 26.07% MAPE.\n",
     "\n",
     "This project divided by two notebook:\n",
     "1. **`1_Wrangling.ipynb`: Consist of loading, exploring, wrangling and cleaning data for machine learning input.**\n",
